<resources>
    <string name="app_name">Ejercicio4</string>
    <string name="etiqueta">INFORMACIÓN DEL INMUEBLE</string>
    <string name="direccion">Dirección</string>
    <string name="numero">Número</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="codigo_postal">Código postal</string>
    <string name="cancelar">CANCELAR</string>
    <string name="crear">CREAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="valoracion">Valoración</string>
    <integer name="valoracion">5</integer>
    <dimen name="valoracion">0</dimen>
</resources>